# opto

./: .devcontainer.json  .gitignore  Cargo.toml  Dockerfile  LICENSE  rustfmt.toml
examples/: Cargo.toml  transfer.rs  zk-patron.rs  zk-solver.rs
examples/nft/: Cargo.toml  README.md  build.rs
examples/nft/src/: api.rs  devex.rs  lib.rs  patron.rs  policies.rs  predicate.rs
examples/sp1/: Cargo.toml
examples/sp1/src/: patron.rs  predicate.rs  solver.rs
examples/token-swap/patron/: Cargo.toml
examples/token-swap/patron/src/: main.rs
examples/token-swap/solver/: Cargo.toml
examples/zk-prover/patron/: Cargo.toml
examples/zk-prover/solver/: Cargo.toml
opto/: Cargo.toml
opto/beacon/: Cargo.toml
opto/beacon/src/: lib.rs  opts.rs
opto/chain/: Cargo.toml  build.rs
opto/chain/runtime/: Cargo.toml  build.rs
opto/chain/runtime/src/: config.rs  debug.rs  lib.rs
opto/chain/runtime/src/pallet_objects/: mod.rs  model.rs  vm.rs
opto/chain/runtime/src/pallet_objects/config/: defaults.rs  genesis.rs  mod.rs  weights.rs
opto/chain/runtime/src/pallet_objects/dispatch/: apply.rs  hooks.rs  init.rs  install.rs  mod.rs  reserve.rs  unwrap.rs  wrap.rs
opto/chain/runtime/src/pallet_objects/tests/: apply.rs  env.rs  install.rs  mod.rs  reserve.rs  unique.rs  unwrap.rs  utils.rs  wrap.rs
opto/chain/runtime/src/pallet_objects/tests/assets/: 100.wasm  1000.wasm  101.wasm  200.wasm  200001.wasm  201.wasm  202.wasm  203.wasm  204.wasm  300.wasm  301.wasm  302.wasm  400.wasm  401.wasm  402.wasm  403.wasm  500.wasm  501.wasm  502.wasm  503.wasm
opto/chain/runtime/src/pallet_objects/vm/: env.rs  mod.rs
opto/chain/src/: lib.rs  opts.rs  rpc.rs  spec.rs  substrate.rs
opto/core/: Cargo.toml
opto/core/src/: codecs.rs  digest.rs  env.rs  eval.rs  expression.rs  lib.rs  object.rs  predicate.rs  query.rs  repr.rs  serde.rs  test.rs  transition.rs
opto/core/src/pattern/: cold.rs  data.rs  hot.rs  mod.rs  object.rs  policies.rs  predicate.rs  transition.rs  unlock.rs
opto/offchain/: Cargo.toml  build.rs
opto/offchain/src/: client.rs  lib.rs  model.rs  transition.rs
opto/offchain/src/client/: mod.rs  model.rs  mutable.rs  read.rs  stream.rs
opto/offchain/src/conventions/: coin.rs  limit.rs  mod.rs  transfer.rs
opto/offchain/src/ext/: expression.rs  mod.rs  object.rs  transition.rs
opto/onchain/: Cargo.toml
opto/onchain/builder/: Cargo.toml
opto/onchain/builder/src/: lib.rs  project.rs  targets.rs
opto/onchain/macros/: Cargo.toml
opto/onchain/macros/src/: env.rs.txt  gen.rs  lib.rs
opto/onchain/src/: asserts.rs  lib.rs  utils.rs
opto/onchain/src/builder/: bundle.rs  project.rs  targets.rs
opto/p2p/: Cargo.toml
opto/p2p/src/: lib.rs
opto/src/: lib.rs  main.rs  opts.rs
opto/src/core/: Cargo.toml
opto/src/core/src/: digest.rs  expression.rs  lib.rs  object.rs  predicate.rs  test.rs  transition.rs
opto/stdpred/: Cargo.toml  build.rs
opto/stdpred/src/: lib.rs  utils.rs
opto/stdpred/src/asset/: coin.rs  mod.rs
opto/stdpred/src/crypto/: blake2b_256.rs  ed25519.rs  groth16_bn254.rs  mod.rs  signature.rs  sp1_groth16.rs  sr25519.rs
opto/stdpred/src/crypto/bls_transcript/: builder.rs  keys.rs  mod.rs  tests.rs
opto/stdpred/src/env/: after.rs  before.rs  mod.rs
opto/stdpred/src/intent/: ephemeral.rs  input.rs  mod.rs  output.rs  transition.rs
opto/stdpred/src/meta/: mod.rs
opto/stdpred/src/util/: constant.rs  mod.rs  nonce.rs  reserve.rs  unique.rs
sdk/offchain/: Cargo.toml
sdk/onchain/: Cargo.toml
sdk/onchain/macros/src/: gen.rs  lib.rs  valid.rs
sdk/onchain/src/: lib.rs
sdk/onchain/src/builder/: bundle.rs  mod.rs  project.rs  targets.rs
stdpred/: Cargo.toml  build.rs
stdpred/src/: lib.rs  utils.rs
stdpred/src/asset/: coin.rs  mod.rs
stdpred/src/crypto/: blake2b_256.rs  ed25519.rs  groth16_bn254.rs  mod.rs  signature.rs  sp1_groth16.rs  sr25519.rs
stdpred/src/intent/: ephemeral.rs  input.rs  output.rs
stdpred/src/meta/: mod.rs
stdpred/src/util/: constant.rs  mod.rs  nonce.rs
