[workspace]
resolver = "2"
members = ["opto", "sdk/offchain", "sdk/onchain", "stdpred"]


[workspace.package]
version = "0.1.0"
rust-version = "1.81"
edition = "2021"
authors = ["Karim Agha"]
license = "MIT"
homepage = "https://opto.network"
repository = "https://github.com/opto-network/opto"
description = "Opto Network"
readme = "README.md"
publish = false

[workspace.dependencies]
blake2 = { version = "0.10", default-features = false }
scale = { version = "3.6", features = [
  "derive",
  "max-encoded-len",
], default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11", default-features = false, features = [
  "derive",
] }
derive_more = { version = "1.0.0", default-features = false }
serde = { version = "1.0", features = [
  "derive",
  "alloc",
], default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
