[workspace]
resolver = "2"
members = [
  "examples/token-swap/patron",
  "examples/token-swap/solver",
  "examples/zk-prover/patron",
  "examples/zk-prover/solver",
  "opto",
  "stdpred",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.81"
edition = "2021"
authors = ["Karim Agha"]
license = "MIT"
homepage = "https://opto.network"
repository = "https://github.com/opto-network/opto"
description = "Opto Network"
readme = "README.md"
publish = false

[workspace.dependencies]
blake2 = { version = "0.10", default-features = false }
tokio = { version = "1.41", features = ["full"] }
futures = { version = "0.3" }
scale = { version = "3.6", features = [
  "derive",
  "max-encoded-len",
], default-features = false, package = "parity-scale-codec" }
clap = { version = "4.5", features = ["derive", "env"] }
scale-info = { version = "2.11", default-features = false, features = [
  "derive",
] }
derive_more = { version = "1.0.0", default-features = false }
serde = { version = "1.0", features = [
  "derive",
  "alloc",
], default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
cid = { version = "0.11", features = [
  "scale-codec",
  "alloc",
], default-features = false }
integer-encoding = { version = "4.0.2", default-features = false }
multihash = { version = "0.19", features = [
  "scale-codec",
  "alloc",
], default-features = false }
ed25519-dalek = { version = "2", default-features = false }
schnorrkel = { version = "0.11", default-features = false, features = [
  "alloc",
] }
ark-serialize = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-groth16 = { version = "0.5", default-features = false }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
sha2 = { version = "0.10", default-features = false }
num-bigint = { version = "0.4", default-features = false }
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
serde_json = { version = "1.0", features = ["alloc"], default-features = false }
log = { version = "0.4" }
