[package]
name = "opto"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true


[lib]
doctest = false
crate-type = ["rlib"]


[features]
default = ["std"]
std = []
test = ["opto-core/test"]

[dependencies]
opto-core = { path = "./src/core", default-features = false }
