[package]
name = "opto"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true


[lib]
doctest = false
crate-type = ["rlib"]

[[bin]]
name = "opto"
path = "src/main.rs"
required-features = ["std"]

[features]
default = ["chain", "beacon"]
std = [
  "tokio",
  "log",
  "env_logger",
  "anyhow",
  "cid/std",
  "opto-core/std",
  "thiserror",
]
chain = ["std", "opto-chain", "p2p"]
p2p = ["std", "opto-p2p"]
beacon = ["std", "opto-beacon", "p2p"]

test = ["opto-core/test"]

[dependencies]
opto-core = { path = "./core", default-features = false }
opto-chain = { path = "./chain", optional = true }
opto-p2p = { path = "./p2p", optional = true }
opto-beacon = { path = "./beacon", optional = true }

tokio = { workspace = true, optional = true }
log = { version = "0.4", optional = true }
anyhow = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { version = "0.11.5", optional = true }
libp2p = { version = "0.54.1", optional = true, features = ["full"] }
bytes = { version = "1.8", features = ["serde"], optional = true }
secp256k1 = { version = "0.30", optional = true }
rmp-serde = { version = "1.3", optional = true }
cid = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
