[package]
name = "opto"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true


[lib]
doctest = false
crate-type = ["rlib"]

[[bin]]
name = "opto"
path = "src/main.rs"
required-features = ["std"]

[features]
default = []
std = [
  "tokio",
  "log",
  "env_logger",
  "anyhow",
  "cid/std",
  "opto-core/std",
  "opto-core/graph",
  "thiserror",
]
chain = ["std", "opto-chain", "p2p", "clap"]
p2p = ["std", "opto-p2p"]
beacon = ["std", "opto-beacon", "p2p", "clap"]
offchain-sdk = ["std", "opto-offchain"]
onchain-sdk = ["opto-onchain"]
build = ["opto-onchain", "opto-onchain/build"]
test = ["opto-core/test"]

[dependencies]
opto-core = { path = "./core", default-features = false }
opto-chain = { path = "./chain", optional = true }
opto-p2p = { path = "./p2p", optional = true }
opto-beacon = { path = "./beacon", optional = true }
opto-offchain = { path = "./offchain", optional = true }
opto-onchain = { path = "./onchain", optional = true }

scale = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
log = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"], optional = true }
env_logger = { version = "0.11.5", optional = true }
libp2p = { version = "0.54.1", optional = true, features = ["full"] }
rmp-serde = { version = "1.3", optional = true }
cid = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
