[package]
name = "example-nft"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish = false
description = "Opto SDK Examples - NFT"

[lib]
name = "nft"
required-features = ["onchain"]

[[bin]]
name = "nft-solver"
path = "bin/solver.rs"
required-features = ["offchain"]

[[bin]]
name = "nft-patron"
path = "bin/patron.rs"
required-features = ["offchain"]

[features]
onchain = ["opto/onchain-sdk"]
offchain = [
  "opto/offchain-sdk",
  "opto/std",
  "tokio",
  "anyhow",
  "onchain",
  "thiserror",
  "rand",
]

[dependencies]
opto = { path = "../../opto", default-features = false }

scale = { version = "3.6", features = [
  "derive",
  "max-encoded-len",
], default-features = false, package = "parity-scale-codec" }

tokio = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[build-dependencies]
opto = { path = "../../opto", features = ["build"], default-features = false }
