[package]
name = "opto-beacon"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
opto-p2p = { path = "../p2p" }

clap = { workspace = true }
