[package]
name = "opto-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false

[features]
default = ["std", "graph"]
std = []
graph = ["petgraph", "std"]
test = []

[dependencies]
scale = { workspace = true }
blake2 = { workspace = true }
scale-info = { workspace = true }
hex = { workspace = true }
scale-encode = { version = "0.8", features = [
  "derive",
], default-features = false }
scale-decode = { version = "0.14", features = [
  "derive",
], default-features = false }
derive_more = { workspace = true, features = [
  "display",
  "from",
  "into",
  "deref",
  "as_ref",
] }
serde = { workspace = true, default-features = false, features = [
  "derive",
  "alloc",
] }
petgraph = { version = "0.6", features = [
  "stable_graph",
], default-features = false, optional = true }

[dev-dependencies]
opto-core = { path = ".", features = ["test", "graph"] }
