[package]
name = "opto-offchain"
version = "0.1.0"
edition = "2021"

[dependencies]
opto-core = { path = "../core" }
opto-stdpred = { path = "../stdpred", features = ["offchain"] }

subxt = { version = "0.38", features = ["substrate-compat"] }
scale = { workspace = true }
pallet-assets = { version = "40.0.0" }
sp-core = { version = "31.0.0" }
subxt-signer = { version = "0.38" }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1" }

[build-dependencies]
opto-chain-runtime = { path = "../chain/runtime", features = ["client-gen"] }
subxt-metadata = { version = "0.37" }
subxt-codegen = { version = "0.37" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
