[package]
name = "opto-onchain"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description = "Opto Onchain SDK"

[dependencies]
macros = { path = "./macros", package = "opto-onchain-macros" }
opto-core = { path = "../core", default-features = false }

[features]
default = []
build = [
  "cargo",
  "cargo-util",
  "nanoid",
  "anyhow",
  "walkdir",
  "proc-macro2",
  "integer-encoding",
  "serde",
  "cid",
  "multihash",
  "libipld",
  "syn",
  "serde_ipld_dagcbor",
]

optimize = ["binaryen"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
syn = { version = "2.0", features = [
  "full",
  "extra-traits",
  "visit",
], optional = true }
cargo = { version = "0.82", optional = true }
cargo-util = { version = "0.2.14", optional = true }
nanoid = { version = "0.4", optional = true }
anyhow = { version = "1.0", optional = true }
walkdir = { version = "2", optional = true }
proc-macro2 = { version = "1.0", optional = true }
integer-encoding = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive", "alloc"], optional = true }
cid = { workspace = true, default-features = false, optional = true }
multihash = { workspace = true, optional = true }
libipld = { version = "0.16", features = [
  "dag-cbor",
  "derive",
], optional = true }
serde_ipld_dagcbor = { version = "0.6", optional = true }
binaryen = { version = "0.13", optional = true }
