[package]
name = "opto-onchain"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description = "Opto Onchain SDK"

[features]
default = ["stdpred", "macros"]
std = []
build = ["std", "opto-onchain-builder"]
stdpred = ["opto-stdpred"]
macros = ["opto-onchain-macros"]
optimize = ["std", "opto-onchain-builder/optimize"]

[dependencies]
opto-onchain-macros = { path = "./macros", optional = true }
opto-core = { path = "../core", default-features = false }
opto-stdpred = { path = "../stdpred", default-features = false, optional = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opto-onchain-builder = { path = "./builder", optional = true }
