[package]
name = "opto-p2p"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true


[dependencies]
opto-core = { path = "../core", default-features = false }


tokio = { workspace = true }
libp2p = { version = "0.54.1", features = ["full"] }
bytes = { version = "1.8", features = ["serde"] }
futures = { version = "0.3", features = [
  "thread-pool",
], default-features = false }
log = { version = "0.4" }
scale = { workspace = true }
thiserror = { workspace = true }
