[package]
name = "opto-stdpred"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description = "Opto Standard Predicates Library"

[features]
default = []
offchain = ["subxt-signer"]

[dependencies]
opto-core = { path = "../core", default-features = false }
opto-onchain = { path = "../onchain", default-features = false }

scale.workspace = true
blake2.workspace = true
ed25519-dalek.workspace = true
schnorrkel.workspace = true
ark-serialize.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
ark-bn254.workspace = true
sha2.workspace = true
num-bigint.workspace = true
cid.workspace = true

subxt-signer = { version = "0.38", optional = true }

[dev-dependencies]
opto-core = { path = "../core", default-features = false, features = ["test"] }
hex-literal = "0.4"
hex = "0.4"

[build-dependencies]
opto-onchain = { path = "../onchain", default-features = false, features = [
  "build",
] }
