[package]
name = "opto-stdpred"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description = "Opto Standard Predicates Library"

[features]
default = []

[dependencies]
opto-core = { path = "../core", default-features = false }
opto-onchain-macros = { path = "../onchain/macros" }

scale.workspace = true
blake2.workspace = true
ed25519-dalek.workspace = true
schnorrkel.workspace = true
cid.workspace = true

[dev-dependencies]
opto-core = { path = "../core", default-features = false, features = ["test"] }
hex-literal = "0.4"
hex = "0.4"

[build-dependencies]
opto-onchain-builder = { path = "../onchain/builder" }
