[package]
name = "opto-stdpred"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description = "Opto Standard Predicates Library"

[features]
default = []
archive = []
std = ["rand"]

[dependencies]
opto-core = { path = "../core", default-features = false }
opto-onchain-macros = { path = "../onchain/macros" }

scale.workspace = true
blake2.workspace = true
ed25519-dalek.workspace = true
schnorrkel.workspace = true
scale-info.workspace = true
ipld-nostd.workspace = true

hex = "0.4"
bs58 = "0.5"
group = "0.13"
pairing = "0.23"
blstrs = { version = "0.7", features = ["portable"] }

rand = { version = "0.8", optional = true }

[dev-dependencies]
opto-core = { path = "../core", default-features = false, features = ["test"] }
hex-literal = "0.4"
hex = "0.4"
rand = { version = "0.8" }

[build-dependencies]
opto-onchain-builder = { path = "../onchain/builder" }
