[package]
name = "token-swap-patron"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
opto = { path = "../../../opto", features = ["offchain-sdk"] }

tokio.workspace = true
anyhow.workspace = true
