[package]
name = "opto-chain-runtime"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
opto-core = { path = "../../core", package = "opto-core", features = [
  "serde",
], default-features = false }

stdpred = { path = "../../stdpred", package = "opto-stdpred", default-features = false }

scale = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
scale-decode = { version = "0.15", features = [
  "derive",
], default-features = false }
scale-encode = { version = "0.8", features = [
  "derive",
], default-features = false }
frame = { version = "0.7.0", package = "polkadot-sdk-frame", features = [
  "experimental",
  "runtime",
], default-features = false }

frame-support = { version = "38.0.0", default-features = false }
frame-system = { version = "38.0", default-features = false }
frame-metadata = { version = "16.0.0", default-features = false, optional = true }

sp-session = { version = "35.0.0", default-features = false }
sp-genesis-builder = { version = "0.15.1", default-features = false }
sp-runtime = { version = "39.0.1", default-features = false, features = [
  "serde",
] }
sp-io = { version = "38.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }

pallet-balances = { version = "39.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-transaction-payment = { version = "38.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }
pallet-assets = { version = "40.0.0", default-features = false }

wasmi = { version = "0.38", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
blake2.workspace = true
substrate-wasm-builder = { version = "24.0.1", default-features = false, optional = true }
ipld-nostd.workspace = true
core2 = { version = "0.4", default-features = false }

env_logger = { version = "0.11", default-features = false, optional = true }

[dev-dependencies]
opto-core = { path = "../../core", package = "opto-core", features = [
  "serde",
  "test",
], default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "24.0.1", default-features = false, optional = true }


[features]
default = ["std"]
std = [
  "scale/std",
  "scale-info/std",

  "frame/std",
  "frame-support/std",
  "frame-system/std",
  "frame/try-runtime",

  "sp-session/std",
  "sp-io/std",
  "sp-keyring/std",

  "pallet-balances/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-assets/std",
  "env_logger",

  "substrate-wasm-builder",
]

try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "sp-runtime/try-runtime",
]

client-gen = ["frame-metadata"]

[lints.clippy]
manual_inspect = "allow"
