[package]
name = "opto-onchain-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true


[features]
default = []
optimize = ["binaryen"]

[dependencies]
opto-core = { path = "../../core", default-features = false }
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
cargo = { version = "0.82" }
cargo-util = { version = "0.2.14" }
nanoid = { version = "0.4" }
anyhow = { version = "1.0" }
walkdir = { version = "2" }
proc-macro2 = { version = "1.0" }
integer-encoding = { workspace = true }
serde = { version = "1.0", features = [
  "derive",
  "alloc",
], default-features = false }
cid = { workspace = true, default-features = false }
multihash = { workspace = true }
libipld = { version = "0.16", features = ["dag-cbor", "derive"] }
serde_ipld_dagcbor = { version = "0.6", default-features = false }
binaryen = { version = "0.13", optional = true }
