[package]
name = "opto-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false

[features]
default = ["std"]
std = []
graph = ["petgraph", "std"]

[dependencies]
scale = { workspace = true }
blake2 = { workspace = true }
scale-info = { workspace = true }
hex = { workspace = true }
derive_more = { workspace = true, features = [
  "display",
  "from",
  "into",
  "deref",
  "as_ref",
] }
serde = { workspace = true, default-features = false, features = [
  "derive",
  "alloc",
] }
petgraph = { version = "0.6", features = [
  "stable_graph",
], default-features = false, optional = true }
